--- a/exercise3/profile.css
+++ b/exercise3/profile.css
@@ -1,4 +1,19 @@
-#bio
-{
-	color:#000;
+body {
+	margin: auto;
+	width: 50%;
+	padding: 10px;
+	text-align: center;
+	border: 3px solid #666;
+	background-color: #AAA;
+
+	font-family:arial;
+	font-size:12;
+}
+
+h2{
+	color:#166;
+}
+
+a:hover{
+	color:#33f;
 }
