--- a/exercise3/profile.css
+++ b/exercise3/profile.css
@@ -10,10 +10,23 @@ body {
 	font-size:12;
 }
 
+h1{
+	color:#169;
+}
+
 h2{
 	color:#166;
 }
 
 a:hover{
 	color:#33f;
+}
+
+#pic{
+	background-image: url(profilepic.jpg);
+	width:500px;
+	height:500px;
+	margin:auto;
+	background-repeat:no-repeat;
+	background-position:center;
 }
