--- a/exercise4/style.css
+++ b/exercise4/style.css
@@ -1,12 +1,16 @@
-body {
+p {
+	padding:30px 0;
 	margin: auto;
 	width: 50%;
-	padding: 10px;
 	text-align: center;
 	border: 3px solid #666;
 	background-color: #AAA;
 
 	font-family:arial;
-	font-size:12;
+	font-size:20pt;
+}
+
+body{
+	background-color: #AAA;
 }
 
